# ChangeLog for dev-vcs/git
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-vcs/git/ChangeLog,v 1.318 2015/03/26 13:01:05 polynomial-c Exp $

*git-2.3.4 (26 Mar 2015)

  26 Mar 2015; Lars Wendler <polynomial-c@gentoo.org> -git-2.3.2.ebuild,
  +git-2.3.4.ebuild:
  Version bump. Removed old.

*git-2.3.3 (16 Mar 2015)

  16 Mar 2015; Lars Wendler <polynomial-c@gentoo.org> -git-2.3.1.ebuild,
  +git-2.3.3.ebuild:
  Version bump. Removed old.

*git-2.3.2 (13 Mar 2015)

  13 Mar 2015; Lars Wendler <polynomial-c@gentoo.org> -git-2.3.0.ebuild,
  +git-2.3.2.ebuild:
  Version bump. Removed old.

*git-2.3.1 (26 Feb 2015)

  26 Feb 2015; Lars Wendler <polynomial-c@gentoo.org> +git-2.3.1.ebuild:
  Version bump.

*git-2.3.0 (06 Feb 2015)

  06 Feb 2015; Lars Wendler <polynomial-c@gentoo.org> -git-2.2.1.ebuild,
  +git-2.3.0.ebuild, git-9999.ebuild, git-9999-r1.ebuild, git-9999-r2.ebuild,
  git-9999-r3.ebuild:
  Version bump. Removed old. Fixed live ebuilds.

*git-2.2.2 (21 Jan 2015)

  21 Jan 2015; Lars Wendler <polynomial-c@gentoo.org> +git-2.2.2.ebuild,
  +files/git-2.2.2-optional-cvs.patch:
  Version bump.

  31 Dec 2014; Mike Frysinger <vapier@gentoo.org> git-2.0.5.ebuild:
  Mark arm64/s390/sh stable.

  31 Dec 2014; Mike Frysinger <vapier@gentoo.org> git-1.8.5.6.ebuild,
  git-1.9.5.ebuild, git-2.0.5.ebuild, git-2.1.4.ebuild, git-2.2.1.ebuild,
  git-9999-r1.ebuild, git-9999-r2.ebuild, git-9999-r3.ebuild, git-9999.ebuild:
  Drop unused empty vars that confuse helper tools like ekeyword.

  26 Dec 2014; Lars Wendler <polynomial-c@gentoo.org> -git-1.8.3.2-r1.ebuild,
  -git-1.8.5.5.ebuild, -git-2.0.4.ebuild, -files/git-1.8.2-optional-cvs.patch,
  -files/git-daemon.initd:
  Removed vulnerable versions.

  26 Dec 2014; Agostino Sarubbo <ago@gentoo.org> git-1.8.5.6.ebuild,
  git-1.9.5.ebuild, git-2.0.5.ebuild:
  Stable for sparc, wrt bug #532984

  25 Dec 2014; Agostino Sarubbo <ago@gentoo.org> git-1.8.5.6.ebuild,